share/ocamlary.css
.ocamlary-doc {
    font-family: sans-serif;
    margin-left: 1em;
    margin-right: 1em;
}

.ocamlary-doc h1.title {
    padding-left: -2em
    margin-left: 1em;
}

.ocamlary-doc .doc {
    padding-left: 2em;
}

.ocamlary-doc .doc-left {
    text-align: left;
}

.ocamlary-doc .doc-right {
    text-align: right;
}

.ocamlary-doc .doc-center {
    text-align: center;
}

.ocamlary-doc .tag .label {
    font-weight: bold;
}

.ocamlary-doc .comment {
    border: 1px solid #CCCCCC;
    border-right: 0;
    border-bottom: 0;
    margin: 1em 0;
    padding: 1em;
    margin-left: -1em;
}

.ocamlary-doc .section {
    border-bottom: 1px solid #CCCCCC;
}

.ocamlary-doc .keyword {
    font-family: monospace;
    font-weight: bold;
}

.ocamlary-doc .sig {
    padding-left: 3em;
}

.ocamlary-doc .tag.deprecated {
    color: orange;
}

.ocamlary-doc .tag.deprecated .label {
    color: red;
}

.ocamlary-doc .module,
.ocamlary-doc .modtype,
.ocamlary-doc .exception,
.ocamlary-doc .type,
.ocamlary-doc .val,
.ocamlary-doc .ext,
.ocamlary-doc .exn,
.ocamlary-doc .class,
.ocamlary-doc .classtype,

.ocamlary-doc .include {
    margin-bottom: 1em;
}

.ocamlary-doc .module_index {
    margin-top: 1em;
    margin-bottom: 1em;
}

/* Field/constructor indentation */
.ocamlary-doc .cons > td,
.ocamlary-doc .field > td {
    vertical-align: top;
    padding: 0;
}

.ocamlary-doc div.cons,
.ocamlary-doc .cons > td,
.ocamlary-doc .field td:nth-child(1),
.ocamlary-doc .field td:nth-child(n+4) {
    padding-left: 1.5em;
}

/* Field/constructor type nowrap */
.ocamlary-doc .cons td:nth-child(1),
.ocamlary-doc .field td:nth-child(2) {
    white-space: nowrap;
}

/* Field/constructor comment syntax alignment */
.ocamlary-doc .cons td:nth-child(4),
.ocamlary-doc .field td:nth-child(6) {
    vertical-align: bottom;
}

/* Fragment highlighting */
.ocamlary-doc :target *,
.ocamlary-doc tr div:target {
    background-color: #FFFFCC;
}

/* Hover fragment links */
.ocamlary-doc .region {
    margin-left: -1.3em;
    padding-left: 1.3em;
}

.ocamlary-doc .region > a.anchor + * {
    margin-top: -1.3em;
}

.ocamlary-doc a.anchor {
    visibility: hidden;
    margin-top: 0;
    margin-left: -1.3em;
    color: #999999;
    text-decoration: none;
}

.ocamlary-doc :hover > a.anchor,
.ocamlary-doc tr:hover a.anchor {
    visibility: visible;
}

.ocamlary-doc a.anchor:hover {
    color: #000000;
    text-decoration: underline;
}

